@@ -65,6 +65,9 @@ auto-import=Imported configuration from the character UI.
 autotrash_pause=Pause Autotrash
 autotrash_pause_requests=Pause Requests
 autotrash_trash_cursor=Trash item on cursor
+autotrash-toggle-gui=Open Auto Trash
+[shortcut-name]
+autotrash-toggle-gui=Open Auto Trash
 
 [mod-setting-name]
 autotrash_trash_equals_requests=Set trash to request amount
