@@ -2,6 +2,9 @@
 Version: 5.2.16
 Date: ????
   Changes:
+    - Added a shortcut to toggle the AutoTrash gui
+    - Added a mod setting to hide the button in the top left
+    - Removed commands /at_show and /at_hide
 ---------------------------------------------------------------------------------------------------
 Version: 5.2.15
 Date: 2020-11-20
